com.github.lainsce.quilter (1.2.3) xenial; urgency=low

  * File I/O now works properly.
  * Organized code properly now.
  * New font for better reading.

 -- Lains <lainsce@airmail.cc>  Mon, 31 July 2017 18:45:00 -0300

com.github.lainsce.quilter (1.2.2) xenial; urgency=low

  * Remove the About Dialog.
  * Shortcuts (Ctrl-O/S) now work properly.

 -- Lains <lainsce@airmail.cc>  Fri, 28 July 2017 18:06:00 -0300

com.github.lainsce.quilter (1.2.1) xenial; urgency=low

  * Fixed the selection bug when using the Quilter style schemes outside Quilter.

 -- Lains <lainsce@airmail.cc>  Tue, 25 July 2017 14:15:00 -0300

com.github.lainsce.quilter (1.2.0) xenial; urgency=low

  * Fixed the "timed crash" on saving the file
  * Save window width & height on close

 -- Lains <lainsce@airmail.cc>  Mon, 10 July 2017 14:56:00 -0300

com.github.lainsce.quilter (1.1.9) xenial; urgency=low

  * Removed unnecessary gsettings for window_maximize

 -- Lains <lainsce@airmail.cc>  Sat, 8 July 2017 02:56:00 -0300

com.github.lainsce.quilter (1.1.8) xenial; urgency=low

  * Fixed the saving/loading of files
  * Added links, codeblocks and the horizontal rule markdown syntaxes to the cheatsheet

 -- Lains <lainsce@airmail.cc>  Fri, 7 July 2017 23:26:00 -0300

com.github.lainsce.quilter (1.1.7) xenial; urgency=low

  * Bump for Glitched AppCenter release

 -- Lains <lainsce@airmail.cc>  Mon, 3 July 2017 01:12:00 -0300

com.github.lainsce.quilter (1.1.6) xenial; urgency=low

  * Bump for AppCenter

 -- Lains <lainsce@airmail.cc>  Sat, 1 July 2017 18:56:00 -0300

com.github.lainsce.quilter (1.1.5) xenial; urgency=low

  * Register Quilter with the plaintext & markdown mime types it uses.
  * Ability to choose Quilter in the Switchboard Applications Plug as an Text Editor.
  * New icons that respect the pixel grid.

 -- Lains <lainsce@airmail.cc>  Sat, 1 July 2017 18:36:00 -0300

com.github.lainsce.quilter (1.1.4) xenial; urgency=low

  * Speed up saving files.